# your-trip-crew

./: .cursorignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci.yml
agents/: Dockerfile  flow_visualization.html  pyproject.toml
agents/mcp_servers/flights/: server.py
agents/mcp_servers/japan_travel/: server.py
agents/mcp_servers/knowledge/: server.py
agents/mcp_servers/taiwan_travel/: server.py
agents/mcp_servers/utilities/: server.py
agents/orchestrator/: flow.py  llm_config.py  mcp_config.py  state.py
agents/orchestrator/agents/: currency_exchange.py  esim_card.py  family_advisor.py  flight_booking.py  intent_parser.py  japan_festival.py  japan_hotel.py  japan_itinerary.py  japan_skiing.py  japan_train.py  taiwan_festival.py  taiwan_hotel.py  taiwan_itinerary.py  taiwan_train.py
agents/orchestrator/crews/: advisory_crew.py  booking_crew.py  intent_crew.py  japan_crew.py  link_validator_crew.py  synthesis_crew.py  taiwan_crew.py
agents/orchestrator/tasks/: advisory_tasks.py  booking_tasks.py  intent_tasks.py  planning_tasks.py  synthesis_tasks.py
agents/scripts/: visualize_flow.py
agents/tests/: conftest.py  test_mcp_e2e.py  test_mcp_errors.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  (+2 more)
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
nginx/: nginx.conf
scripts/: init_graphiti.py  seed_packages.py
(+77 files in other folders)
