[project]
name = "ai-trip-agents"
version = "0.1.0"
description = "AI Travel Planning Agents & MCP Servers"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.86.0",
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.57.0",
    "graphiti-core>=0.5.0",
    "neo4j>=5.26.0",
    "pgvector>=0.3.6",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
